# Tech-Challenge

./: .env.example  .gitignore  README.md  generate_keys.py  pyproject.toml  render.yaml  requirements.txt
BookToScrape/: books.csv
BookToScrape/BookToScrape/: pipelines.py  settings.py
api/: app.py  database.py  logger.py  main.py  wsgi.py
api/dashboard/: app.py
api/routes/: auth.py  books.py  categories.py  health.py  ml.py  scraping.py  stats.py
api/services/: data_store.py
data/: books.csv
data/processed/: books.csv
docs/: README.md  api_design.md  architecture.md  future_ml.md  pipeline.md
scraping/: parser.py  scraper.py
scripts/: ingest_sqlite.py  run_scraping.py  scrape_books.py
src/: __init__.py  extensions.py
src/config/: __init__.py  config.py
src/databases/: books.db
src/models/: __init__.py  books.py  user.py
src/repository/: __init__.py  books_repository.py  user_repository  user_repository.py
src/routes/: __init__.py  auth.py  books.py  health.py  ml.py  stats.py
src/scraper/: books.csv  books.db  scrapy.cfg
src/scraper/BookToScrape/: items.py  middlewares.py  pipelines.py  settings.py
src/scraper/BookToScrape/spiders/: books.py
src/services/: __init__.py  auth_service.py  books_service.py  ml_service.py
src/utils/: __init__.py  exceptions.py  validators.py
tests/: conftest.py
